@@ -2,12 +2,11 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'jacoco'
-    id "org.sonarqube" version "3.3"
     id 'signing'
 }
 
-group 'io.github.artrayme'
-version '0.7.0'
+group 'org.semanticpie'
+version '0.7.1'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -29,18 +28,11 @@ test {
     useJUnitPlatform()
 }
 
-// For java9 modules
-//compileJava {
-//    options.compilerArgs += ['--add-reads', 'JMantic.main=ALL-UNNAMED']
-//    options.compilerArgs += ['-Xlint:unchecked'] // use to see more information about compiler warnings
-//}
-
-// Create jar archive with dependencies
 jar {
     from {
         configurations.runtimeClasspath.filter { it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
     }
-    duplicatesStrategy DuplicatesStrategy.EXCLUDE
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 jacocoTestReport {
@@ -52,15 +44,6 @@ jacocoTestReport {
         csv.required = true
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
-
-}
-
-sonarqube {
-    properties {
-        property "sonar.projectKey", "artrayme_JMantic"
-        property "sonar.organization", "artrayme"
-        property "sonar.host.url", "https://sonarcloud.io"
-    }
 }
 
 java {
@@ -69,17 +52,16 @@ java {
 }
 
 publishing {
-
     publications {
         gpr(MavenPublication) {
-            groupId 'io.github.artrayme'
+            groupId 'org.semanticpie'
             artifactId 'jmantic'
-            version '0.7.0'
+            version '0.7.1'
             from components.java
             pom {
                 name = 'JMantic'
-                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol Options';
-                url = 'https://github.com/artrayme/JMantic'
+                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol'
+                url = 'https://github.com/semantic-pie/JMantic'
                 licenses {
                     license {
                         name = 'MIT'
@@ -94,21 +76,21 @@ publishing {
                     }
                 }
                 scm {
-                    developerConnection = 'scm:git:https://github.com/artrayme/JMantic.git'
-                    url = 'https://github.com/artrayme/JMantic'
+                    developerConnection = 'scm:git:https://github.com/semantic-pie/JMantic.git'
+                    url = 'https://github.com/semantic-pie/JMantic'
                 }
             }
         }
 
         mavenJava(MavenPublication) {
-            groupId 'io.github.artrayme'
-            artifactId = 'jmantic'
-            version '0.7.0'
+            groupId 'org.semanticpie'
+            artifactId 'jmantic'
+            version '0.7.1'
             from components.java
             pom {
                 name = 'JMantic'
-                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol Options';
-                url = 'https://github.com/artrayme/JMantic'
+                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol'
+                url = 'https://github.com/semantic-pie/JMantic'
                 licenses {
                     license {
                         name = 'MIT'
@@ -123,27 +105,20 @@ publishing {
                     }
                 }
                 scm {
-                    developerConnection = 'scm:git:https://github.com/artrayme/JMantic.git'
-                    url = 'https://github.com/artrayme/JMantic'
+                    developerConnection = 'scm:git:https://github.com/semantic-pie/JMantic.git'
+                    url = 'https://github.com/semantic-pie/JMantic'
                 }
             }
         }
     }
+
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/artrayme/jmantic")
+            url = uri("https://maven.pkg.github.com/semantic-pie/jmantic")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
-            }
-        }
-        maven {
-            name = "Sonatype"
-            url = uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/")
-            credentials {
-                username = System.getenv("SONATYPE_ACTOR")
-                password = System.getenv("SONATYPE_PASSWORD")
             }
         }
     }
@@ -156,7 +131,6 @@ signing {
     sign publishing.publications.mavenJava
     sign publishing.publications.gpr
 }
-
 
 javadoc {
     if (JavaVersion.current().isJava9Compatible()) {
